# tesseract-mingw

./: .gitignore  ApiExample.cpp  ApiExample.pro  README.md  test_302.cpp
cmake/: CMakeLists.txt
cmake/contrib/: tesseract.rc
lib/: libgif.la  libjbig.la  libjpeg.la  liblept.la  libpng.la  libtesseract.la  libtiff.la  libtiffxx.la  libwebp.la
